--- a/server/package.json
+++ b/server/package.json
@@ -9,8 +9,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "puppeteer": "^24.36.1",
     "qrcode-terminal": "^0.12.0",
     "socket.io": "^4.7.4",
-    "whatsapp-web.js": "^1.23.0"
+    "whatsapp-web.js": "github:pedroslopez/whatsapp-web.js#main"
   }
 }
