feat: Add PostgreSQL database integration with REST API
- Install pg and dotenv packages
- Create database module with connection pool
- Implement CRUD operations for leads (create, read, update, delete)
- Add smart update logic: preserve status, update message/timestamp
- Create REST API endpoints: /api/leads, /api/stats
- Integrate database into message processor
- Add real-time socket events for lead updates

--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "clsx": "^2.1.1",
     "cors": "^2.8.6",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "lucide-react": "^0.511.0",
+    "pg": "^8.18.0",
     "puppeteer": "^24.36.1",
     "qrcode": "^1.5.4",
     "react": "^19.1.0",
